add product html

--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Browser Tab logo -->
-
     <link rel="icon" href="img/logo-baruno.png" />
     <link rel="apple-touch-icon" href="img/logo-baruno-apple.png" />
 
-    <!-- Fonts (Playfair display, Roboto) -->
-
+    <!-- Fonts (Playfair display, Rubik) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -27,22 +25,18 @@
       rel="stylesheet"
     />
 
-    <!-- font awesome -->
+    <!-- Icon font awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
 
-
-    <!-- Animate On Scroll - jQuery Plugins -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+    <!-- CSS -->
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
 
     <!-- Icon dari Ion Icons -->
-
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
@@ -95,7 +89,7 @@
       <!-- Section Hero Start -->
       <section class="section-hero">
         <div class="hero">
-          <div class="hero-text-box" data-aos="fade-right">
+          <div class="hero-text-box">
             <h1 class="heading-primary">
               Experience guilt-free indulgence with our healthy bakery. Treat
               yourself today
@@ -122,7 +116,7 @@
               </p>
             </div>
           </div>
-          <div class="hero-img-box" data-aos="fade-left">
+          <div class="hero-img-box">
             <picture>
               <source srcset="img/hero-glr.webp" type="image/webp" />
               <source srcset="img/hero-gallery.png" type="image/png" />
@@ -138,7 +132,7 @@
       <!-- Section About US Start -->
 
       <section class="section-about" id="about">
-        <div class="container" data-aos="zoom-in">
+        <div class="container">
           <span class="subheading">About Us</span>
           <h2 class="heading-secondary">
             Partnering for Quality: Our Three-Part Approach to Baking Excellence
@@ -147,7 +141,7 @@
 
         <div class="container grid grid--2-cols grid--center-v">
           <!-- about 01 -->
-          <div class="about-text-box" data-aos="fade-right">
+          <div class="about-text-box">
             <p class="about-number">01</p>
             <h3 class="heading-tertiary">
               Delicious and Nutritious Baked Goods
@@ -160,7 +154,7 @@
             </p>
           </div>
 
-          <div class="about-img-box" data-aos="fade-left">
+          <div class="about-img-box">
             <img
               src="img/about-us/about-us-1.png"
               class="about-img"
@@ -169,14 +163,14 @@
           </div>
 
           <!-- about 02 -->
-          <div class="about-img-box" data-aos="fade-right">
+          <div class="about-img-box">
             <img
               src="img/about-us/about-us-2.png"
               class="about-img"
               alt="Wheat"
             />
           </div>
-          <div class="about-text-box" data-aos="fade-left">
+          <div class="about-text-box">
             <p class="about-number">02</p>
             <h3 class="heading-tertiary">
               Quality and Taste: Our Commitment to You
@@ -189,7 +183,7 @@
           </div>
 
           <!-- about 03 -->
-          <div class="about-text-box" data-aos="fade-right">
+          <div class="about-text-box">
             <p class="about-number">03</p>
             <h3 class="heading-tertiary">
               Our Story: From Humble Beginnings to a Respected Name
@@ -202,7 +196,7 @@
               at our bakery!
             </p>
           </div>
-          <div class="about-img-box" data-aos="fade-left">
+          <div class="about-img-box">
             <img
               src="img/about-us/about-us-3.png"
               class="about-img about-us-3-fix"
@@ -218,8 +212,8 @@
 
       <section class="section-featured" id="featured">
         <div class="container">
-          <h2 class="heading-featured-in" data-aos="fade-down">in collaboration with</h2>
-          <div class="logos" data-aos="fade-down">
+          <h2 class="heading-featured-in">in collaboration with</h2>
+          <div class="logos">
             <img src="img/logos/chatime-logo-3.png" alt="Logo Chatime" />
             <img
               src="img/logos/kopi-kenangan-logo-2.png"
@@ -240,7 +234,7 @@
       <!-- Section Range of Product Start -->
 
       <section class="section-meals" id="meals">
-        <div class="container center-text" data-aos="zoom-in">
+        <div class="container center-text">
           <span class="subheading">range of products</span>
           <h2 class="heading-secondary">
             Healthy breads and cakes without compromising on deliciousness
@@ -248,7 +242,7 @@
         </div>
 
         <div class="container grid grid--3-cols margin-bottom-md">
-          <div class="product-range" data-aos="fade-down">
+          <div class="product-range">
             <img
               src="img/meals/bread.jpg"
               class="product-range-img"
@@ -289,7 +283,7 @@
             </div>
           </div>
 
-          <div class="product-range" data-aos="fade-down">
+          <div class="product-range">
             <img
               src="img/meals/cake.jpg"
               class="product-range-img"
@@ -331,7 +325,7 @@
             </div>
           </div>
 
-          <div class="diets" data-aos="fade-left">
+          <div class="diets">
             <h3 class="heading-tertiary">Works with any diet:</h3>
             <ul class="list">
               <li class="list-item">
@@ -362,7 +356,7 @@
           </div>
         </div>
 
-        <div class="container all-recipes" data-aos="zoom-in">
+        <div class="container all-recipes">
           <a href="products.html" class="link">See all products &rarr;</a>
         </div>
       </section>
@@ -372,12 +366,12 @@
       <!-- Section Our Team Start -->
 
       <section class="section-team" id="team">
-        <div class="main-heading" data-aos="zoom-out">
+        <div class="main-heading">
           <span class="subheading">Our Master Chef</span>
           <p class="heading-secondary">We're professional at our skills</p>
         </div>
         <div class="box-container">
-          <div class="box" data-aos="zoom-in">
+          <div class="box">
             <div class="image">
               <img src="img/team/darren.jpg" alt="Foto Darren" />
             </div>
@@ -403,7 +397,7 @@
             </div>
           </div>
 
-          <div class="box" data-aos="zoom-in">
+          <div class="box">
             <div class="image">
               <img src="img/team/baskoro.jpg" alt="Foto Baskoro" />
             </div>
@@ -424,7 +418,7 @@
             </div>
           </div>
 
-          <div class="box" data-aos="zoom-in">
+          <div class="box">
             <div class="image">
               <img src="img/team/saad-3.png" id="saad" alt="Foto Saad" />
             </div>
@@ -454,22 +448,22 @@
 
       <section class="section-statistic" id="statistic">
         <div class="container grid grid--4-cols">
-          <div class="statistic" data-aos="fade-up">
+          <div class="statistic">
             <ion-icon class="statistic-icon" name="people"></ion-icon>
             <p class="statistic-title">67</p>
             <p class="statistic-text">Skilled Proffesional</p>
           </div>
-          <div class="statistic" data-aos="fade-down">
+          <div class="statistic">
             <ion-icon class="statistic-icon" name="cart"></ion-icon>
             <p class="statistic-title">7324</p>
             <p class="statistic-text">Avg Order per Day</p>
           </div>
-          <div class="statistic" data-aos="fade-up">
+          <div class="statistic">
             <ion-icon class="statistic-icon" name="storefront"></ion-icon>
             <p class="statistic-title">42</p>
             <p class="statistic-text">Branch Shop</p>
           </div>
-          <div class="statistic" data-aos="fade-down">
+          <div class="statistic">
             <ion-icon class="statistic-icon" name="star"></ion-icon>
             <p class="statistic-title">4.85</p>
             <p class="statistic-text">Avg Rating</p>
@@ -483,13 +477,13 @@
 
       <section class="section-testimonials" id="testimonials">
         <div class="testimonials-container">
-          <span class="subheading" data-aos="fade-down">Customer Testimonials</span>
-          <h2 class="heading-secondary" data-aos="fade-up">
+          <span class="subheading">Customer Testimonials</span>
+          <h2 class="heading-secondary">
             Once you try it, you'll never settle for less!
           </h2>
 
           <div class="testimonials">
-            <figure class="testimonial"  data-aos="fade-right">
+            <figure class="testimonial">
               <img
                 class="testimonial-img"
                 alt="Photo of customer Geril"
@@ -502,7 +496,7 @@
               <p class="testimonial-name">&mdash; Raden Gheryl</p>
             </figure>
 
-            <figure class="testimonial"  data-aos="fade-right">
+            <figure class="testimonial">
               <img
                 class="testimonial-img"
                 alt="Photo of customer Rehan"
@@ -515,7 +509,7 @@
               <p class="testimonial-name">&mdash; Rayhan Alfarizi</p>
             </figure>
 
-            <figure class="testimonial"  data-aos="fade-left">
+            <figure class="testimonial">
               <img
                 class="testimonial-img"
                 alt="Photo of customer Asadel"
@@ -529,7 +523,7 @@
               <p class="testimonial-name">&mdash; Satrio Asadel</p>
             </figure>
 
-            <figure class="testimonial"  data-aos="fade-left">
+            <figure class="testimonial">
               <img
                 class="testimonial-img"
                 alt="Photo of customer Farras"
@@ -545,7 +539,7 @@
           </div>
         </div>
 
-        <div class="gallery" data-aos="zoom-in">
+        <div class="gallery">
           <figure class="gallery-item">
             <img
               src="img/gallery/g1.jpg"
@@ -793,13 +787,6 @@
     <button id="scroll-top" onclick="topFunction()">&uarr;</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        once: true,
-        duration: 600,
-      });
-    </script>
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
   </body>
