--- a/index.html
+++ b/index.html
@@ -71,9 +71,6 @@
       <div class="extra-nav">
         <a class="main-nav-link" href="login.html">Log In</a>
         <a class="main-nav-link sign-up" href="signup.html">Sign Up</a>
-        <a id="cart"
-          ><ion-icon class="icon-nav" name="cart-outline"></ion-icon
-        ></a>
         <a id="menu"
           ><ion-icon
             class="icon-nav ham-menu"
@@ -357,7 +354,7 @@
         </div>
 
         <div class="container all-recipes">
-          <a href="products.html" class="link">See all products &rarr;</a>
+          <a href="product.html" class="link">See all products &rarr;</a>
         </div>
       </section>
 
